zoek functie naar sql

--- a/PhoneshopTest/Phoneshop.Business,Test.csproj
+++ b/PhoneshopTest/Phoneshop.Business,Test.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Phoneshop.Domain\Phoneshop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PhoneServiceTests\" />
+  </ItemGroup>
+
 </Project>
