--- a/PhoneshopTest/Phoneshop.Business.Test.csproj
+++ b/PhoneshopTest/Phoneshop.Business.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -24,10 +24,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Phoneshop.Business\Phoneshop.Business.csproj" />
     <ProjectReference Include="..\Phoneshop.Domain\Phoneshop.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="PhoneServiceTests\" />
   </ItemGroup>
 
 </Project>
