--- a/Phoneshop.Business/Phoneshop.Business.csproj
+++ b/Phoneshop.Business/Phoneshop.Business.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Phoneshop.Data\Phoneshop.Data.csproj" />
     <ProjectReference Include="..\Phoneshop.Domain\Phoneshop.Domain.csproj" />
   </ItemGroup>
 
