--- a/Phoneshop.WebAPI/Phoneshop.WebAPI.csproj
+++ b/Phoneshop.WebAPI/Phoneshop.WebAPI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
