--- a/Phoneshop.Domain/Phoneshop.Domain.csproj
+++ b/Phoneshop.Domain/Phoneshop.Domain.csproj
@@ -10,10 +10,15 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.11" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Database\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Phoneshop.Shared\Phoneshop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
