auth toegevoegd en async in alle frontrnds

--- a/Phoneshop.WebAPI/appsettings.json
+++ b/Phoneshop.WebAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwtTokenConfig": {
+    "Issuer": "Phoneshop",
+    "Audience": "*",
+    "Secret": "06E63E9B-39D8-414F-AC53-999DA6DE6977",
+    "AccessTokenExpiration": 30,
+    "RefreshTokenExpiration": 525600
+  }
 }
+
