--- a/Phoneshop.WebAPI/appsettings.json
+++ b/Phoneshop.WebAPI/appsettings.json
@@ -12,6 +12,9 @@
     "Secret": "06E63E9B-39D8-414F-AC53-999DA6DE6977",
     "AccessTokenExpiration": 30,
     "RefreshTokenExpiration": 525600
+  },
+  "ConnectionStrings": {
+    "PhoneshopDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=phoneshop;Integrated Security=True;Connect Timeout=30;Encrypt=False"
   }
 }
 
