email check added

--- a/Phoneshop.WebAPI/App.config
+++ b/Phoneshop.WebAPI/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <connectionStrings>
     <add name="PhoneshopDatabase"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=phoneshop;Integrated Security=True;Connect Timeout=30;Encrypt=False" />
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial
+            Catalog=phoneshop2;Integrated Security=True;Connect Timeout=30;Encrypt=False
+            TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
 </configuration>
