--- a/Phoneshop.ConsoleApp/Phoneshop.ConsoleApp.csproj
+++ b/Phoneshop.ConsoleApp/Phoneshop.ConsoleApp.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+    <PackageReference Include="Validation" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
