--- a/Phoneshop.WebAPI/Phoneshop.WebAPI.csproj
+++ b/Phoneshop.WebAPI/Phoneshop.WebAPI.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="Validation" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
