--- a/Phoneshop.WebAPI/appsettings.json
+++ b/Phoneshop.WebAPI/appsettings.json
@@ -14,7 +14,6 @@
     "RefreshTokenExpiration": 525600
   },
   "ConnectionStrings": {
-    "PhoneshopDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=phoneshop;Integrated Security=True;Connect Timeout=30;Encrypt=False"
+    "PhoneshopDatabase": "Data Source=sqlserver,1433;User ID=sa;Password=GeitenMekker21!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
-
