--- a/Phoneshop.Data/App.config
+++ b/Phoneshop.Data/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="PhoneshopDatabase"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PhoneshopEntities;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+         connectionString="Data Source=localhost;User ID=sa;Password=********;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" />
   </connectionStrings>
 </configuration>
