--- a/Phoneshop.WebAPI/App.config
+++ b/Phoneshop.WebAPI/App.config
@@ -2,8 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="PhoneshopDatabase"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial
-            Catalog=phoneshop2;Integrated Security=True;Connect Timeout=30;Encrypt=False
-            TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+         connectionString="Data Source=localhost;User ID=sa;Password=GeitenMekker21!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" />
   </connectionStrings>
 </configuration>
