--- a/Phoneshop.Angular/AngularPhoneshop/Dockerfile
+++ b/Phoneshop.Angular/AngularPhoneshop/Dockerfile
@@ -10,11 +10,13 @@ COPY package*.json ./
 
 RUN npm install
 RUN npm install -g @angular/cli
+
 # If you are building your code for production
 # RUN npm ci --omit=dev
 
 # Bundle app source
+
 COPY . .
 
-EXPOSE 8080
-CMD [ "node", "server.js" ]
+EXPOSE 4200
+CMD ng serve --host 0.0.0.0
