--- a/Phoneshop.WebAPI/App.config
+++ b/Phoneshop.WebAPI/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="PhoneshopDatabase"
-         connectionString="Data Source=localhost;User ID=sa;Password=GeitenMekker21!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" />
+         connectionString="Data Source=sqlserver;User ID=SA;Password=GeitenMekker21!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" />
   </connectionStrings>
 </configuration>
