--- a/PhoneshopTest/App.config
+++ b/PhoneshopTest/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="PhoneshopDatabase"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=phoneshop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+         connectionString="Data Source=sqlserver;User ID=SA;Password=GeitenMekker21!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"" />
   </connectionStrings>
 </configuration>
