--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     build:
       context: .
       dockerfile: Phoneshop.WebAPI/Dockerfile
+    ports:
+        - 80:80
+        - 443:443
   sqlserver:
       image: mcr.microsoft.com/mssql/server:2022-latest    
       environment:
